@@ -105,6 +105,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Pascal                 Tux
 - Perl                   Andreas Gohr, Ben Keen
 - PL/SQL                 Victor Engmark
+- PowerShell             Frode Aarebrot
 - Python                 Roberto Rossi
 - Rails                  Moises Deniz
 - Reg                    SmokingRope
